--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@now/node"
+      "use": "@vercel/node"
     }
   ],
   "rewrites": [
