--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
 {
-  "github": {
-    "silent": false
-  },
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/u/(.*)",
-      "destination": "server.js"
-    }
-  ]
+  "rewrites": [{ "source": "/u/(.*)", "destination": "/api" }]
 }
