--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "rewrites": [{ "source": "/apix/(.*)", "destination": "/apix" }]
+  "rewrites": [
+    { "source": "/u*", "destination": "/apix*" }
+  ]
 }
