--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "cd api && yarn"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
